--- a/code/flightahead_prep_AG.ipynb
+++ b/code/flightahead_prep_AG.ipynb
@@ -1816,7 +1816,7 @@
     }
    ],
    "source": [
-    "# Evaluate baseline model on test set\n",
+    "# Evaluate hyperparameter model on test set\n",
     "tuned_test_preds = model_tuned.predict(X_test_scaled)\n",
     "tuned_test_accuracy = accuracy_score(y_test, tuned_test_preds)\n",
     "\n",
@@ -1911,7 +1911,7 @@
     }
    ],
    "source": [
-    "# Evaluate baseline model on test set\n",
+    "# Evaluate AdaBoost model on test set\n",
     "ada_test_preds = ada_model.predict(X_test_scaled)\n",
     "ada_test_accuracy = accuracy_score(y_test, ada_test_preds)\n",
     "\n",
